# smarttextdecorator

./: MANIFEST.in  README.md  setup.cfg  setup.py
smarttextdecorator/: __init__.py  tools.py
