[metadata]
name = smarttextdecorator
version = attr: smarttextdecorator.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = A cross-platform library for decorating strings and displaying them beautifully in the console. Generates and displays lines to the full width of the console with the specified text and a placeholder character. Generates and displays a line with the specified text, decorated at the top and bottom with filler characters along the length of the line. Use for beautiful design of console applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smarttextdecorator/
project_urls =
    Documentation = https://github.com/smartlegionlab/smarttextdecorator/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smarttextdecorator/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    text decorator
    smartlegionlab

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =